Added MySQL support

--- a/.docker/.env
+++ b/.docker/.env
@@ -3,6 +3,13 @@ PROJECT_NAME=project
 PHP_VERSION=7.2
 DRUSH_VERSION=9.7.1
 
+MYSQL_VERSION=5.7
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DB_NAME=project
+MYSQL_DB_USER=user
+MYSQL_DB_PASSWORD=pass
+
 PORTS_WEB=80
+PORTS_MYSQL=3306
 
 PATH_APP=../
