--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -13,3 +13,20 @@ services:
       - "${PORTS_WEB}:80"
     volumes:
       - ${PATH_APP}:/var/www/html
+
+  database:
+    image: mysql:${MYSQL_VERSION}
+    container_name: "${PROJECT_NAME}_database"
+    ports:
+      - "${PORTS_MYSQL}:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DB_NAME
+      MYSQL_USER: $MYSQL_DB_USER
+      MYSQL_PASSWORD: $MYSQL_DB_PASSWORD
+    volumes:
+      - ./database/mysql/config:/etc/mysql/conf.d
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
