Added some PHP extensions

--- a/.docker/.env
+++ b/.docker/.env
@@ -4,8 +4,9 @@ PHP_VERSION=7.2
 DRUSH_VERSION=9.7.1
 
 MYSQL_VERSION=5.7
+MYSQL_ALLOW_EMPTY_PASSWORD='yes'
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DB_NAME=project
+MYSQL_DB_NAME=db
 MYSQL_DB_USER=user
 MYSQL_DB_PASSWORD=pass
 
