--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     ports:
       - "${PORTS_MYSQL}:3306"
     environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: $MYSQL_ALLOW_EMPTY_PASSWORD
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
       MYSQL_DATABASE: $MYSQL_DB_NAME
       MYSQL_USER: $MYSQL_DB_USER
