--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - "${PORTS_WEB}:80"
     volumes:
+      - ./www/php/config:/usr/local/etc/php/conf.d
       - ${PATH_APP}:/var/www/html
 
   database:
@@ -20,7 +21,6 @@ services:
     ports:
       - "${PORTS_MYSQL}:3306"
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: $MYSQL_ALLOW_EMPTY_PASSWORD
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
       MYSQL_DATABASE: $MYSQL_DB_NAME
       MYSQL_USER: $MYSQL_DB_USER
